modificado para DOM

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Intro To JavaScript</title>
+  <title>Ejercicio DOM</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -14,7 +14,9 @@
 
 <body>
   <div class="container">
-    <h1>Hola Cohorte fspt119</h1>
+    <h1>Hola Cohorte fspt119, hoy veremos el DOM</h1>
+    <p id="mensaje">Este es el mensaje original.</p>
+    <button id="botonCambiar">Clic para cambiar</button>
   </div>
   <script src="app.js"></script>
 </body>
