--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,11 +12,9 @@
 </head>
 
 <body>
-  <div class="container">
-    <h1>Hola Cohorte fspt119, hoy veremos el DOM</h1>
-    <p id="mensaje">Este es el mensaje original.</p>
-    <button id="botonCambiar">Clic para cambiar</button>
-  </div>
+  
+  <p id="mensaje"> Hola clase fs pt 119</p>
+  <button onclick="saludar()">Haz clic</button>
   <script src="app.js"></script>
 </body>
 
